Every element is resized with window resize

--- a/Assignment_1_Code/listPage.html
+++ b/Assignment_1_Code/listPage.html
@@ -44,7 +44,7 @@
                         </td>
                     </tr>
             </table>
-            <button type = "button" id = "new_place_btn">Create New Tourist Place</button>
+            <button type = "submit" id = "new_place_btn">Create New Tourist Place</button>
         </div>
         
     </body>
