--- a/Assignment_1_Code/createPage.html
+++ b/Assignment_1_Code/createPage.html
@@ -9,7 +9,7 @@
         
         <div id = "information_container" align = "center">
         <h2>Add a New Tourist Place</h2>
-            <form action = "\save_Place" method = "POST">
+            <form>
                 <div class = "element_container">
                     <label for = "place_name">Name:</label>
                     <input type = "text" id = "place_name" name = "place_name">
@@ -21,10 +21,18 @@
                 <div class = "element_container">
                     <label for = "place_rating">Rating:</label>
                     <input type = "number" id = "place_rating" name = "place_rating" min = 1 max = 5>
+                    <span id = "rating_range">
+                        Range 1 - 5
+                    </span>
                 </div>
                 <div class = "element_container"> 
                     <label for = "place_type">Type:</label>
-                    <input type = "text" id = "place_type" name = "place_type" pattern = "Beach|Hills|Fountains|Landmark|beach|hills|fountains|landmark" title = "Please enter  any one of Beach / Hills / Fountains / Landmark">
+                    <select id = "place_type" name = "place_type">
+                            <option value="beach">Beach</option>
+                            <option value="hills">Hills</option>
+                            <option value="fountains">Fountains</option>
+                            <option value="landmark">Landmark</option>
+                    </select>
                 </div>
                 <div class = "element_container">
                     <label>Picture:</label>
